--- a/views/moodle_user_course_views.xml
+++ b/views/moodle_user_course_views.xml
@@ -6,7 +6,7 @@
         <field name="model">moodle.user.course</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="user_id"/>
+                <field name="moodle_user_id"/>
                 <field name="course_name"/>
                 <field name="course_shortname"/>
                 <field name="enrol_date"/>
@@ -26,7 +26,7 @@
                 <sheet>
                     <group>
                         <group>
-                            <field name="user_id"/>
+                            <field name="moodle_user_id"/>
                             <field name="course_name"/>
                             <field name="course_shortname"/>
                             <field name="moodle_course_id"/>
@@ -49,7 +49,7 @@
         <field name="model">moodle.user.course</field>
         <field name="arch" type="xml">
             <search>
-                <field name="user_id"/>
+                <field name="moodle_user_id"/>
                 <field name="course_name"/>
                 <field name="course_shortname"/>
                 <field name="moodle_course_id"/>
@@ -57,7 +57,7 @@
                 <filter string="In Progress" name="in_progress" domain="[('completion_state', '=', 'in_progress')]"/>
                 <filter string="Not Started" name="not_started" domain="[('completion_state', '=', 'not_started')]"/>
                 <group expand="0" string="Group By">
-                    <filter string="User" name="group_user" context="{'group_by': 'user_id'}"/>
+                    <filter string="User" name="group_user" context="{'group_by': 'moodle_user_id'}"/>
                     <filter string="Status" name="group_state" context="{'group_by': 'completion_state'}"/>
                 </group>
             </search>
